# whisper-server

./: .gitignore  Dockerfile  Makefile  README.md  compose.gpu.yml  compose.yml  pyproject.toml  sample.env
.github/workflows/: docker-publish.yml
src/whisper_server/: config.py  server.py
