[project]
name = "whisper-server"
version = "0.1.0"
description = "FastAPI wrapper around faster-whisper with Docker and uv tooling"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "the80hz", email = "dnl.vlgv@mail.ru" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.6",
    "nvidia-cudnn-cu12>=9.1.0",
    "nvidia-cublas-cu12>=12.4.0",
]

[project.urls]
Homepage = "https://github.com/the80hz/whisper-server"

[dependency-groups]
dev = [
  "ruff>=0.8.2",
  "pytest>=8.3.4"
]
